--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,44 +1,43 @@
 <h4>Formularios <small>template</small></h4>
 <hr>
-<form (ngSubmit)="save(forma)" #forma="ngForm">
+<form (ngSubmit)="save(forma)" class="needs-validation" #forma="ngForm" novalidate>
 
-  <div>
 
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
-      <div class="col-8">
 
-        <input class="form-control"
-               type="text"
-               placeholder="Nombre"
-               name="nombre"
-               [(ngModel)]="user.nombre"
-               minlength="5"
-               required
-               #nombre="ngModel">
-        <div *ngIf="nombre.errors?.required">
-          Campo requerido
-        </div>
-        <div *ngIf="nombre.errors?.minlength">
-         Por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
-        </div>
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Nombre</label>
+    <div class="col-8">
+
+      <input class="form-control" [ngClass]="{'is-invalid': (nombre.errors?.minlength || nombre.errors?.required) && nombre.touched}" 
+              type="text"
+              placeholder="Nombre"
+              name="nombre"
+              [(ngModel)]="user.nombre"
+              minlength="5"
+              required
+              #nombre="ngModel">
+      <div *ngIf="nombre.errors?.required" class="invalid-feedback">
+        Campo requerido
+      </div>
+      <div *ngIf="nombre.errors?.minlength" class="invalid-feedback">
+        Por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
       </div>
     </div>
+  </div>
 
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
-      <div class="col-8">
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Apellido</label>
+    <div class="col-8">
 
-        <input class="form-control"
-               type="text"
-               placeholder="Apellido"
-               name="apellido"
-               [(ngModel)]="user.apellido"
-               required
-               #apellido="ngModel">
-        <div *ngIf="apellido.errors?.required">
-          Campo requerido
-        </div>
+      <input class="form-control"
+              type="text"
+              placeholder="Apellido"
+              name="apellido"
+              [(ngModel)]="user.apellido"
+              required
+              #apellido="ngModel">
+      <div *ngIf="apellido.errors?.required">
+        Campo requerido
       </div>
     </div>
 
@@ -71,7 +70,7 @@
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary">
+      <button [disabled]="!forma.valid" type="submit" class="btn btn-outline-primary">
         Guardar
       </button>
     </div>
